frontend/style.css
@import url(https://fonts.bunny.net/css?family=abeezee:400);

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  background-color: #2c3e50;
  color: #f3f3f3;
  font-family: 'ABeeZee', sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100vh;
}

.container {
  width: 1140px;
  max-width: 100%;
  margin: 0 auto;
  padding: 0 16px;
}

.title {
  margin-top: 48px;
}

.quiz {
  padding: 32px;
  background-color: #415162;
  border-radius: 10px;
}

.progress {
  text-align: right;
  font-size: 20px;
}

.question {
  margin: 48px 0;
}

.option {
  display: block;
  border-radius: 0;
  border: none;
  width: 100%;
  margin-top: 16px;
  padding: 16px 0;
  font-family: inherit;
  color: #333;
  font-size: 16px;
  cursor: pointer;
}

.info {
  display: none;
}

.button-reload {
  display: none;
  border-radius: 4px;
  margin-top: 16px;
  background-color: #f3f3f3;
  color: #333;
  padding: 16px 32px;
  text-decoration: none;
}

.button-reload:hover {
  background-color: #dbdbdb;
}

.footer {
  background-color: #f1c40f;
  padding: 24px;
  text-align: center;
  color: #333;
}

.footer-content {
  display: flex;
  justify-content: space-between;
}

.author a {
  text-decoration: none;
  color: inherit;
}

@media (max-width: 800px) {
  .author {
    display: none;
  }
}

